# WodWiseApp

./: .editorconfig  .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: PULL_REQUEST_TEMPLATE.md
app/: CMakeLists.txt  build.gradle.kts  detekt-baseline.xml  google-services.json
app/src/androidTest/java/com/migueldev/wodwiseapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/migueldev/wodwiseapp/: ApiKeyRetriever.kt  MainActivity.kt  MyFirebaseMessagingService.kt  WodWiseApp.kt
app/src/main/java/com/migueldev/wodwiseapp/data/dto/: WeightDto.kt  WorkoutDto.kt
app/src/main/java/com/migueldev/wodwiseapp/data/mapper/: LocaleProvider.kt  TimeStampToString.kt  WeightDtoToMap.kt  WeightResponseToDomain.kt  WorkoutDtoToMap.kt  WorkoutResponseToDomain.kt
app/src/main/java/com/migueldev/wodwiseapp/data/session/: UserPreferences.kt
app/src/main/java/com/migueldev/wodwiseapp/di/: AppModule.kt  CoroutinesDispatchersModule.kt  LoggingModule.kt  NetworkModule.kt  OpenAIModule.kt  ProvideModule.kt  TimeProviderModule.kt
app/src/main/java/com/migueldev/wodwiseapp/domain/exception/: AddWeightHistoryException.kt  ConvertStringToLocalDateException.kt  FirestoreAddDocumentException.kt  FirestoreConnectionException.kt  FirestoreUnknownErrorException.kt  InvalidDateException.kt  LoginFailedException.kt  OpenAIResponseNullException.kt  RegistrationFailedException.kt  RemoveWeightHistoryException.kt  TimeStampFirestoreException.kt
app/src/main/java/com/migueldev/wodwiseapp/model/: Routes.kt
app/src/main/java/com/migueldev/wodwiseapp/presentation/: AppStateManager.kt  MainActivity.kt
app/src/main/res/drawable-anydpi/: ic_stat_name.xml
app/src/main/res/values/: splash.xml  strings.xml  themes.xml
app/src/main/res/values-es/: strings.xml
app/src/test/java/com/migueldev/wodwiseapp/: ExampleUnitTest.kt
app/src/test/java/com/migueldev/wodwiseapp/core/: MockkExtension.kt
(+275 files in other folders)
